--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,3 @@
-/**
-* Template Name: Arsha - v4.3.0
-* Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 html {
   scroll-behavior: smooth;
   min-width: 340px;
@@ -352,13 +342,15 @@ h3{
   padding: 0;
   display: flex;
   list-style: none;
-  align-items: center;
+  align-items: center;  
 }
 
 .navbar li {
   position: relative;
 }
-
+.navbar .active{
+  color: #47b2e4;
+}
 .navbar a,
 .navbar a:focus {
   display: flex;
@@ -377,12 +369,13 @@ h3{
   font-size: 12px;
   line-height: 0;
   margin-left: 5px;
+  color: #47b2e4;
 }
 
 .navbar a:hover,
-.navbar .active,
 .navbar .active:focus,
-.navbar li:hover>a {
+.navbar li:hover>a,
+.navbar .active{
   color: #47b2e4;
 }
 
@@ -632,7 +625,7 @@ section {
 # About Us
 --------------------------------------------------------------*/
 #about.about {  
-  margin-top: 40px;
+  margin-top: 80px;
   /* background-color: #dfaadf;   */
   height: 900px;
   background-image: url("/assets/img/pattern3-bg.png");
