--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,13 +42,14 @@ h3{
                }
       .jb-text { 
         position: absolute; 
+        top: 58%; 
         top: 53.2%; 
         width: 100%; 
         transform: translateY(-100%);
       }        
       .jb-text>h1.welcome,
       #hero >.swiper-container>.swiper-wrapper>.swiper-slide.last>h1 {         
-        /* margin-top: -24px; */
+        margin-top: -24px;
         /* margin-left: 10%; */                
         font-size: 4.2em; 
         color: #fff;
@@ -66,10 +67,14 @@ h3{
         margin-left: 10% !important;
         font-size: 4.5em !important;
       }
-
+      /* 홈 슬라이드 페이지 위 여백 조절 테스트 */
+     #hero >.swiper-container{
+      margin-top: -20px;
+      /* zoom: 2; */
+    }
   @media (max-width: 991px) {
      .jb-text {
-       top: 48%;       
+       top: 42%;       
        transform: scale(0.95);       
      } 
      .jb-text .welcome{       
@@ -82,8 +87,13 @@ h3{
      .swiper-pagination {
        position: absolute;
        top: 90%;
+       
      }
-
+     /* 홈 슬라이드 페이지 위 여백 조절 테스트 */
+     #hero >.swiper-container{
+       margin-top: -40px;
+       /* zoom: 2; */
+     }
     }  
   @media (max-width: 768px) {
     .jb-text {
@@ -112,7 +122,6 @@ h3{
      .swiper-slide.first .text-group h1 {
        line-height: 60px !important;
      }
-
      .logo {
        zoom: 0.8;
      }
@@ -131,8 +140,7 @@ h3{
     } 
     .jb-text .welcome{     
       line-height: 70px !important;
-      position: absolute;      
-      top: 0;
+      position: absolute;            
       zoom:0.8
      }
      .jb-text .interaction-d{     
@@ -162,7 +170,7 @@ h3{
 --------------------------------------------------------------*/
 #hero >.swiper-container {
   width: 100%;
-  height: 118%;
+  height: 118%;  
   position: relative;
 }
 #hero >.swiper-container>.swiper-wrapper>.swiper-slide.first {
@@ -493,8 +501,8 @@ h3{
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-  width: 100%;
-  height: 88vh;
+  width: 100%;  
+  height: 88vh;  
   /* background: #37517e; */
 }
 #hero .container {  
@@ -653,6 +661,11 @@ section {
     transform: scale(0.8);
     margin-left: 20%;
    }   
+
+ .profile-image-i {
+    left: -1%;
+
+ }  
  @media (max-width: 991px) {
   #about.about {
     height: 1100px
@@ -661,10 +674,11 @@ section {
     transform: scale(0.6);    
     }
     #about.about>.container>.row>.col-lg-6.left>.profile-image>.profile-image-b,
-    #about.about>.container>.row>.col-lg-6.left>.profile-image>.profile-image-i{
+    #about.about>.container>.row>.col-lg-6.left>.profile-image>.5{
       margin: 0 auto;
       position: absolute;
       left: 50%;
+      /* left: 30%; */
       
      }
      #about.about>.container>.row>.col-lg-6.left>.profile-image>.profile-image-b {
@@ -988,6 +1002,15 @@ section {
   padding: 10px 15px;
 }
 
+.atag {
+color: blue;
+text-decoration:underline;
+ }
+ .atag:hover {
+  color:blue;
+  text-decoration:underline;
+   }
+
 .portfolio .portfolio-item .portfolio-info h4 {
   font-size: 18px;
   color: #fff;
@@ -1045,6 +1068,9 @@ section {
   display: block;
   /* visibility: hidden; */
  } 
+ .portfolio-details {
+   margin-bottom: -60px;
+ }
  .portfolio-details .portfolio-info {
   padding: 30px;
   box-shadow: 0px 0 30px rgba(55, 81, 126, 0.08);
@@ -1073,6 +1099,7 @@ section {
   font-weight: 700;
   margin-bottom: 20px;
   padding-left: 20px;
+  letter-spacing: 0.8px;
   /* background-color:#209dd8; */
 }
 .portfolio-details .portfolio-description p {
@@ -1147,7 +1174,8 @@ section {
     margin: 0px 6%;
   }
   .portfolio-details { 
-    padding: 0px 200px;   
+    padding: 0px 200px; 
+    margin-bottom: 5px;  
   } 
 .portfolio-details .container .row.gy-4 {
   display: flex;
@@ -1474,6 +1502,10 @@ section {
 /*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
+.portfolio-title {
+  letter-spacing: 0.4px;
+}
+
 #goback {
   padding: 10px;
 }
@@ -1489,6 +1521,55 @@ section {
   transform: scale(0.8);   
   
 }
+
+/*--------------------------------------------------------------
+# Processbook
+--------------------------------------------------------------*/
+#processbook {
+  font-size: 14px;
+  height: 180px;
+  display: flex;
+  justify-content: center;
+}
+
+#processbook .hover{
+  height: 100px;
+  transform: translateY(50%)  
+}
+
+#processbook .button {  
+  font-size: 18px;
+  color: #003960;  
+  border-radius: 80px;
+  text-align: center;  
+  /* margin-top: 30px;   */
+  width: 200px;
+  height: 60px;
+  line-height: 60px;
+  background: #fff;
+  transition: all .2s ;  
+}
+
+#processbook .button:hover {
+  color: #fff;
+  background: #209dd8;   
+  width: 200px;
+  height: 60px;
+}
+
+/* #processbook .footer-top>.container {
+  width: 100%;
+  padding: 30px 0 30px 0;  
+  background: #fff;
+  display: flex;
+  justify-content: center;
+} */
+/* #footer .footer-top>.container .row{  
+  display: flex;
+  justify-content: space-between;  
+ }
+ #footer .footer-top>.container .row .footer-contact {   
+  } */
 
 
 /*--------------------------------------------------------------
@@ -1751,4 +1832,28 @@ section {
   #footer .credits {
     padding-top: 4px;
   }
+}
+
+#processbook {
+  font-size: 14px;
+  height: 140px;
+  /* background: #18d26e;   */
+}
+
+#processbook .button {
+  margin-top: -18px;
+  font-size: 16px;
+  color: #003960;  
+  border-radius: 80px;
+  text-align: center;      
+  width: 160px;
+  height: 60px;
+  line-height: 60px;  
+  transition: transform 1s, all .2s ;
+}
+
+#processbook .button:hover {
+  color: #fff;
+  background: #209dd8;
+  width: 160px;   
 }
