--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,36 +16,162 @@ a:hover {
 }
 h1,h2,h4,h5,h6 {
   font-family: "Cantarell", sans-serif;
-  letter-spacing: -0.04em;
+  letter-spacing:-0.02em;  
 }
+h
 h3{  
-  letter-spacing: +0.02em;
+  letter-spacing: +0.01em;
 }
+.index,.about {
+  height: 42.5px;
+}
+.welcome {
+  letter-spacing:-0.04em;
+}
+
+.section-title>.p-letter{
+  letter-spacing: -0.08em;
+}
+
+@media (max-width: 4000px) {
+  #header .logo {    
+    position: absolute;
+    font-size: 30px;  
+    top: 20px;
+    margin-left: 3%;
+    line-height: 1;
+    font-weight: 500;
+    letter-spacing: 2px;
+    text-transform: uppercase;        
+  }
+  #header {    
+    display: flex;
+  } 
+  .navbar-two {       
+    position: absolute;
+    right: 6%;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .nav-link.scrollto {
+    text-align: center;     
+  }
+ }
+ @media (max-width: 1800px) {
+  #header .logo {    
+    position: absolute;
+    font-size: 30px;  
+    top: 20px;
+    margin-left: 60px;
+    line-height: 1;
+    font-weight: 500;
+    letter-spacing: 2px;
+    text-transform: uppercase;    
+  }  
+  }
+
+  /* @media (max-width: 1024px) {
+    #header .logo {    
+      position: absolute;
+      font-size: 30px;  
+      top: 20px;
+      margin-left: 20px;
+      line-height: 1;
+      font-weight: 500;
+      letter-spacing: 2px;
+      text-transform: uppercase;    
+    }
+    .navbar-two {       
+    position: absolute;
+    right: -7.5%;
+    display: flex;
+    justify-content: flex-end;
+  }    
+   } */
+   
+   @media (max-width: 991px) {
+    .jb-text {
+      top: 42%;       
+      transform: scale(0.95);       
+    } 
+    .jb-text .welcome{       
+      margin-left: -1% !important;
+     }
+   .jb-text h3.interaction-d {
+     margin-left: -1% !important;
+     margin-top: 2% !important;
+    }
+    .swiper-pagination {
+      position: absolute;
+      top: 90%;
+      
+    }
+    /* 홈 슬라이드 페이지 위 여백 조절 테스트 */
+    #hero >.swiper-container{
+      margin-top: -40px;
+      /* zoom: 2; */
+    }
+    #header .logo {    
+      position: absolute;
+      font-size: 30px;  
+      top: 20px;
+      margin-left: 2% !important;
+      line-height: 1;
+      font-weight: 500;
+      letter-spacing: 2px;
+      text-transform: uppercase;    
+    } 
+    .bi-list::before {
+      position: absolute;
+      /* margin-left: -16%; */
+      /* background-color:#18d26e; */
+      margin-top: -16px;      
+    }
+    .jb-text .interaction-d{     
+      position: absolute;      
+      top: 80% ;
+      left: 55%;
+      transform: translateX(-50%);
+      /* zoom: 0.75;   */
+      width: 100%;
+     }
+   }  
 /*--------------------------------------------------------------
 # Video
 --------------------------------------------------------------*/
+#hero {
+  width: 100%;
+  height: 100vh;
+  background-color:#18d26e;
+  transform: scale(1.3);  
+  position: fixed;    
+}
 .jb-box { 
   width: 100vw; 
   height: 100vh;
   object-fit: cover; 
-  overflow: hidden;
+  /* overflow: hidden; */
   margin: 0px auto; 
   position: relative; 
   display: flex;
-  justify-content: center;
+  justify-content: center;  
+  background-color:#209dd8;
 }
       video {        
         width: 2755px;
-        height: 1550px;
-        margin-top: -18%;
-        transform: scale(1.2);
+        height: 100%;
+        /* height: 1550px; */
+        /* margin-top: 200px; */
+        transform: scale(1.2);               
+        background-color:#209dd8;
                }
       .jb-text { 
         position: absolute; 
         top: 58%; 
-        top: 53.2%; 
+        top: 45%; 
         width: 100%; 
         transform: translateY(-100%);
+        transform: scale(0.75);
       }        
       .jb-text>h1.welcome,
       #hero >.swiper-container>.swiper-wrapper>.swiper-slide.last>h1 {         
@@ -67,52 +193,13 @@ h3{
         margin-left: 10% !important;
         font-size: 4.5em !important;
       }
-      /* 홈 슬라이드 페이지 위 여백 조절 테스트 */
-     #hero >.swiper-container{
-      margin-top: -30px;      
-      /* left:-1px; */
-    }
-
-  @media (max-width: 991px) {
-     .jb-text {
-       top: 42%;       
-       transform: scale(0.95);       
-     } 
-     .jb-text .welcome{       
-       margin-left: -1% !important;
-      }
-    .jb-text h3.interaction-d {
-      margin-left: -1% !important;
-      margin-top: 2% !important;
-     }
-     .swiper-pagination {
-       position: absolute;
-       top: 90%;
-       
-     }
-     /* 홈 슬라이드 페이지 위 여백 조절 테스트 */
-     #hero >.swiper-container{
-       margin-top: -40px;
-       /* zoom: 2; */
-     }
-    }  
+ 
   @media (max-width: 768px) {
-    .jb-text {
-      height: 800px;
-    }    
-    .jb-text .welcome{     
-      line-height: 70px !important;
-      position: absolute;
-      /* top: -5%; */
-      left: 4%;
-      zoom:0.8
-     }
-     .jb-text .interaction-d{     
-      position: absolute;      
-      top: 11% ;
-      left: 20%;    
-      zoom: 0.8;  
-     }
+    .jb-text {    
+      font-size:small;
+      margin-top: -0.4%;   
+      transform: scale(60%);      
+    }
      .swiper-slide.last .text-group,
      .swiper-slide.first .text-group {
       position: absolute;
@@ -126,17 +213,7 @@ h3{
      .logo {
        zoom: 0.8;
      }
-   }
-   @media (max-width: 878px) {
-    .jb-text {
-      position: absolute;
-      top: 41%;       
-    }     
-    .text-group.second>.interaction-d {
-      position: relative;
-      top: 10px;      
-    }
-   } 
+   }   
    @media (max-width: 700px) {
     .jb-text {
       height: 400px;
@@ -146,12 +223,13 @@ h3{
     .jb-text .welcome{     
       line-height: 70px !important;
       position: absolute;            
-      zoom:0.8
+      transform: scale(90%);
+      top: -25%;      
      }
      .jb-text .interaction-d{     
       position: absolute;      
-      top: 30% ;
-      left: 53%;
+      top: 10% ;
+      left: 55%;
       transform: translateX(-50%);
       zoom: 0.75;  
       width: 100%;
@@ -167,9 +245,7 @@ h3{
      .swiper-slide.first .text-group h1 {
        line-height: 60px !important;
      }
-    }
-   
-     
+    }     
 /*--------------------------------------------------------------
 # Swiper
 --------------------------------------------------------------*/
@@ -314,7 +390,6 @@ h3{
   z-index: 997;
   padding: 15px; 
 }
-
 #header.fixed-top .container {
   margin-left: 9%;  
 }
@@ -322,25 +397,23 @@ h3{
 #header.header-inner-pages {
   background: rgba(255, 255, 255, 1);
 }
-
-#header .logo {
-  font-size: 30px;
-  margin: 0;
-  padding: 0;
+#header .logo {  
+  position: absolute;
+  font-size: 30px;  
+  top: 20px;
+  left: 6%;
   line-height: 1;
   font-weight: 500;
   letter-spacing: 2px;
   text-transform: uppercase;
+  transform: scale(80%)
 }
-
 #header .logo a {
   color: #333;
 }
-
 #header .logo img {
   max-height: 40px;
 }
-
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
@@ -379,7 +452,6 @@ h3{
   white-space: nowrap;
   transition: 0.3s;
 }
-
 .navbar a i,
 .navbar a:focus i {
   font-size: 12px;
@@ -395,12 +467,18 @@ h3{
   color: #47b2e4;
 }
 @media (max-width: 1600px) {
-  .navbar {
+  .navbar-two {    
     padding: 0;
-    margin-right: 12%;
+    margin-right: 8%;
     left: -3%;
   }
- }
+ /* }
+  #navbar {    
+    padding: 0;
+    margin-right: 20%;
+    left: -3%;
+  } */
+ } 
 
 @media (max-width: 1400px) {
   .navbar {
@@ -409,20 +487,20 @@ h3{
     left: -3%;
   }
  }
-
 @media (max-width: 1366px) {
-  /* .navbar {
+  .navbar {
     padding: 0;
-    margin-right: 15%;
+    margin-right: 5%;
     left: 6%;
-  } */
-  /* .navbar .dropdown .dropdown ul {
+  }
+  .navbar .dropdown .dropdown ul {
     left: -90%;
   }
   .navbar .dropdown .dropdown:hover>ul {
     left: -100%;
-  } */
+  }
 }
+
 /**
 * Mobile Navigation 
 */
@@ -439,6 +517,7 @@ h3{
   color: #fff;
 }
 @media (max-width: 991px) {
+  
   .mobile-nav-toggle {
     display: block;
   }
@@ -567,20 +646,6 @@ h3{
     width: 50%;
   }
 }
-@media (max-width: 768px) {
-  #hero h1 {
-    font-size: 28px;
-    line-height: 36px;
- }
-  #hero h2 {
-    font-size: 18px;
-    line-height: 24px;
-    margin-bottom: 30px;
-}
-  #hero .hero-img img {
-    width: 70%;
-  }
-}
 @media (max-width: 575px) {
   #hero .hero-img img {
     width: 80%;
@@ -612,8 +677,11 @@ h3{
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 100px 0;
   overflow: hidden;  
+}
+#main {  
+  margin-top: 80px;  
 }
 /* .section-bg {
   background-color: #f3f5fa;
@@ -666,8 +734,7 @@ section {
   background-image: url("/assets/img/pattern3-bg.png");
   background-repeat: no-repeat;
   background-position: left bottom;
-  background-position: 15% 60%;
-  
+  background-position: 15% 60%;  
 }
 #about.about>.container{
   /* background-color:#53c3ff; */
@@ -694,11 +761,16 @@ section {
 
  }  
  @media (max-width: 991px) {
-  .jb-text {    
-    font-size:small;
-    margin-top: -0.4%;    
-    
-  }
+  #header .logo {    
+    position: absolute;
+    font-size: 30px;  
+    top: 30%;
+    margin-left: -4%;
+    line-height: 1;
+    font-weight: 500;
+    letter-spacing: 2px;
+    transform: scale(80%)
+  }  
   .text-group.second {
     font-size: 10px;
     background-color:rgba(255, 255, 255, 0.9);    
@@ -733,8 +805,19 @@ section {
       display: inline-block;
             
      } 
- }
+ } 
+ 
  @media (max-width: 557px) {
+  #header .logo {    
+    position: absolute;
+    font-size: 30px;  
+    top: 30%;
+    margin-left: -4%;
+    line-height: 1;
+    font-weight: 500;
+    letter-spacing: 2px;
+    transform: scale(80%)
+  }
   .jb-text {
     margin-top: -40px;
     font-size:small;    
@@ -1024,7 +1107,7 @@ section {
     background-attachment: scroll;
   }
 }
-@media (min-width: 769px) {
+@media (min-width: 769px) {  
   .cta .cta-btn-container {
     display: flex;
     align-items: center;
@@ -1077,15 +1160,15 @@ section {
 }
 
 .portfolio .portfolio-item .portfolio-info {
-  opacity: 0;
+  opacity: 0;  
   position: absolute;
-  left: 15px;
+  left: 15px;  
   bottom: 0;
   z-index: 3;
   right: 15px;
   transition: all 0.3s;
   background: rgba(55, 81, 126, 0.8);
-  padding: 10px 15px;
+  padding: 10px 15px;  
 }
 
 .atag {
@@ -1194,7 +1277,6 @@ text-decoration:underline;
   /* background-color:#209dd8; */
   font-size: 16px !important;
 }
-
 /*--------------------------------------------------------------
 # Portfolio Details-Pagination
 --------------------------------------------------------------*/
@@ -1255,7 +1337,13 @@ text-decoration:underline;
 }
 
 
-@media (max-width: 1400px) {
+@media (max-width: 1400px) { 
+    .navbar-two {
+      padding: 0;
+      margin-right: 8%;
+      left: 16%;
+    }
+   
   .breadcrumbs .container, #goback {
     margin: 0px 6%;
     padding: 0px;
@@ -1280,7 +1368,7 @@ text-decoration:underline;
  } 
 }
 
-@media (max-width: 1040px) {
+@media (max-width: 1040px) { 
   .portfolio-details { 
     padding: 0px 20px;   
   }
@@ -1309,6 +1397,7 @@ text-decoration:underline;
   }   
   }
   @media (max-width: 768px) {
+    
     .col-lg-9 .portfolio-scroll .scroll-wrapper .portfolio-items {
       display: flex;
       justify-content: center;
@@ -1327,12 +1416,13 @@ text-decoration:underline;
        }
       }
   @media (max-width: 578px) {
+   
     .portfolio-details { 
       padding: 0px 0px ;   
     }
           }
-  @media (max-width: 514px) {    
-    .col-lg-9 .portfolio-scroll .scroll-wrapper .portfolio-items {
+  @media (max-width: 514px) {
+     .col-lg-9 .portfolio-scroll .scroll-wrapper .portfolio-items {
       display: flex;
       justify-content: center;
      }
@@ -1562,7 +1652,12 @@ text-decoration:underline;
   /* margin-top: 72px; */
 }
 
-@media (max-width: 992px) {
+@media (max-width: 992px) {  
+  .jb-text {    
+    font-size:small;    
+    transform: scale(60%);
+    
+  }  
   .breadcrumbs {
     margin-top: 68px;
   }
@@ -1594,8 +1689,16 @@ text-decoration:underline;
   content: "/";
 }
 
+.breadcrumbs .container ol li a {
+  color: #444;
+  cursor: pointer;
+}
+.breadcrumbs .container ol li:last-child {
+  color: #47B2E4;  
+}
+
 /*--------------------------------------------------------------
-# Breadcrumbs
+# Breadcrumbs end
 --------------------------------------------------------------*/
 .portfolio-title {
   letter-spacing: 0.4px;
@@ -1690,6 +1793,12 @@ text-decoration:underline;
   }
 
   @media (max-width: 578px) {
+
+    .jb-text {    
+      font-size:small;
+      margin-top: -20%;
+      transform: scale(60%);      
+    }
     html {
       overflow-x: hidden;
     }
@@ -1912,8 +2021,7 @@ text-decoration:underline;
 #footer .credits a {
   transition: 0.3s;
 }
-@media (max-width: 768px) {
-  
+@media (max-width: 768px) {   
   #footer .footer-bottom {
     padding-top: 20px;
     padding-bottom: 20px;
